--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,6 +1,6 @@
 <div class="profile">
     <div class="profile-picture">
-        <img src="./assets/img/girl.svg">
+        <img src="./assets/img/logoArchi.jpg">
     </div>
     <h1>{{ site.title }}</h1>
 </div>
